--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
+language: node_js
+node_js:
+  - "stable"
+cache:
+  directories:
+  - node_modules
+script:
+  - npm test
 deploy:
   provider: lambda
   function_name: "travis-test"
