--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 - npm test
 deploy:
   provider: lambda
-  function_name: travis-test
+  function_name: SWoT
   region: us-east-1
   role: arn:aws:iam::578324725290:role/service-role/lambdarole
   runtime: nodejs6.10
