--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/jpdillingham/SWoT-Backend#readme",
   "dependencies": {
-    "express": "^4.16.2",
-    "serverless-http": "^1.5.3"
+    "aws-serverless-express": "^3.1.3",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2"
   }
 }
