--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lambda.js",
   "scripts": {
     "start": "node app.local.js",
+    "test": "echo \"Error: no test specified\""
   },
   "license": "Apache-2.0",
   "dependencies": {
