--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "url": "https://github.com/jpdillingham/SWoT-Backend/issues"
   },
   "homepage": "https://github.com/jpdillingham/SWoT-Backend#readme",
-  "dependencies": {}
+  "dependencies": {
+    "aws-serverless-express": "^3.1.3",
+    "express": "^4.16.2"
+  }
 }
