--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jpdillingham/SWoT-Backend#readme",
   "dependencies": {
     "aws-serverless-express": "^3.1.3",
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2"
   }
