--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jpdillingham/SWoT-Backend#readme",
   "dependencies": {
+    "aws-sdk": "^2.208.0",
     "aws-serverless-express": "^3.1.3",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
