--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ deploy:
   region: us-east-1
   role: arn:aws:iam::578324725290:role/service-role/lambdarole
   runtime: nodejs6.10
+  module_name: src/index
   handler_name: handler
   access_key_id: AKIAISVZZFCRHSNRRK7Q
   secret_access_key:
