--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
+    "clean-modules": "rm -rf node_modules/aws-sdk && modclean -rvn default:safe,default:caution",
     "zip": "python tools\\zip.py ./ ./build/deploy.zip",
-    "deploy": "aws lambda update-function-code --function-name SWoT --zip-file fileb://build/deploy.zip"
+    "update-function": "aws lambda update-function-code --function-name SWoT --zip-file fileb://build/deploy.zip",
+    "deploy": "npm run clean-modules && npm run zip && npm run update-function"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,8 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2"
+  },
+  "devDependencies": {
+    "modclean": "^2.1.2"
   }
 }
